# musicstuff

./: .gitignore  Cargo.toml  README.md
src/: camelot.rs  lib.rs
src/camelot/: search.rs  transition.rs
