[package]
name = "musicstuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.4"
regex = "1.10.3"
serde_with = { version = "3.6.1" }
thiserror = "1.0.57"
schemars = "0.8.16"
graphstuff = { path = "../graphstuff" }